# integral

./: .bwconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  deploy.yml
crates/integral-cli/: Cargo.toml
crates/integral-cli/src/: device.rs  hex.rs  main.rs  midi.rs
crates/integral-cli/src/commands/: dump.rs  mod.rs  monitor.rs  ping.rs  raw.rs  svd.rs
crates/integral-core/: Cargo.toml  build.rs
crates/integral-core/src/: address.rs  bitstream.rs  catalog.rs  device.rs  device_spec.rs  factory_catalog.rs  fx_params.rs  lib.rs  mfx.rs  mfx_params.rs  midi_bridge.rs  param_registry.rs  params.rs  parse_helpers.rs  pcm_drum.rs  pcm_synth.rs  sn_acoustic.rs  sn_drum.rs  sn_synth.rs  sna_inst_params.rs  state.rs  svd.rs  svd_convert.rs  svd_specs.rs  sysex.rs  tone_banks.rs  tone_catalog.rs
crates/integral-core/src/state/: mod.rs  parse.rs
crates/integral-core/tests/fixtures/: test_sns.svd
crates/integral-vst/: .stylelintrc.json  Cargo.toml
crates/integral-vst/src/: editor.rs  lib.rs  standalone.rs  theme.css
crates/integral-vst/src/views/: channel_strip.rs  envelope.rs  eq_section.rs  mixer_page.rs  mod.rs  pan_knob.rs  routing_page.rs  section_panel.rs  surround_page.rs  synth_fader.rs  synth_knob.rs  synth_select.rs  synth_switch.rs  tone_editor.rs  tone_selector.rs  top_bar.rs  volume_fader.rs
crates/integral-wasm/: Cargo.toml
crates/integral-wasm/src/: lib.rs
crates/openlink-core/: Cargo.toml
crates/openlink-vst/: Cargo.toml
crates/openlink-wasm/: Cargo.toml
docs/design/: output-routing.md
docs/manual/: 01-architecture.md  02-tone-types.md  03-effects.md  04-studio-sets.md  05-operational.md  06-specifications.md  README.md
docs/midi/: 01-protocol.md  02-channel-messages.md  03-bank-select-tables.md  04-address-map.md  05-studio-set.md  06-pcm-synth-tone.md  07-pcm-drum-kit.md  08-supernatural-synth-tone.md  09-supernatural-acoustic-tone.md  10-supernatural-drum-kit.md  11-fx-parameters.md  99-undocumented.md  README.md
docs/params/: 01-studio-set.md  02-supernatural-acoustic.md  03-supernatural-synth.md  04-supernatural-drum.md  05-pcm-synth-tone.md  06-pcm-drum-kit.md  07-mfx-types.md  README.md
docs/research/: phrase-preview.md
docs/sounds/: README.md  categories.json  expcm.json  exsn.json  gm2.json  pcm-drum-preset.json  pcm-synth-preset.json  sn-acoustic-preset.json  sn-drum-preset.json  sn-synth-preset.json
docs/svd/: 01-container.md  02-encoding.md  03-sn-synth.md  04-chunk-types.md  README.md
issues/: i7-18x.1.json  i7-18x.2.json  i7-18x.3.json  i7-18x.4.json  i7-18x.5.json  i7-18x.6.json  i7-18x.json  i7-1fn.1.json  i7-1fn.10.json  i7-1fn.2.json  i7-1fn.3.json  i7-1fn.4.json  i7-1fn.5.json  i7-1fn.6.json  i7-1fn.7.json  i7-1fn.8.json  i7-1fn.9.json  i7-1fn.json  i7-1se.1.json  i7-1se.2.json  i7-1se.3.json  i7-1se.4.json  i7-1se.json  i7-2ul.1.json  i7-2ul.2.json  i7-2ul.3.json  i7-2ul.4.json  i7-2ul.5.json  i7-2ul.json  i7-2y8.1.json  i7-2y8.10.json  i7-2y8.11.json  i7-2y8.12.json  i7-2y8.13.json  i7-2y8.14.json  i7-2y8.15.json  i7-2y8.16.json  i7-2y8.17.json  i7-2y8.2.json  i7-2y8.3.json  (+167 more)
scripts/: ping-device.py
web/: .stylelintrc.json  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.module.css  App.tsx  ChannelStrip.module.css  ChannelStrip.tsx  DeviceSelector.module.css  DeviceSelector.tsx  DeviceStatus.module.css  DeviceStatus.tsx  (+62 more)
(+31 files in other folders)
