[workspace]
resolver = "3"
members = [
    "crates/integral-core",
    "crates/integral-wasm",
    "crates/integral-vst",
    "crates/integral-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[patch."https://github.com/RustAudio/baseview.git"]
baseview = { path = "patches/baseview" }
