[package]
name = "integral-cli"
description = "CLI tools for the Integral Integra-7 control surface"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "integral"
path = "src/main.rs"

[dependencies]
integral-core = { path = "../integral-core" }
midir = "0.10"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
