[package]
name = "integral-core"
description = "Integra-7 SysEx engine, state management, and address maps"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
