[package]
name = "integral-vst"
description = "VST3 plugin for the Integral Integra-7 control surface"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "integral"
path = "src/standalone.rs"

[dependencies]
integral-core = { path = "../integral-core" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
cpal = "0.15"
