[package]
name = "integral-wasm"
description = "WASM bindings for the Integral web frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
integral-core = { path = "../integral-core", features = ["serde"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
