[package]
name = "integral-wasm"
description = "WASM bindings for the Integral web frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
integral-core = { path = "../integral-core", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
